application.properties: Set name to advertise the microservice as; listen on a random port.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # were translated to the empty string by the DAOs before we converted them to JPA.
 # This interceptor accomplishes the same purpose.
 spring.jpa.properties.hibernate.ejb.interceptor = com.sst.nt.lms.admin.dao.EmptyStringInterceptor
+
+spring.application.name = admin
+server.port = 0
