database-config.properties: Try to reduce log verbosity in test runs.

--- a/src/test/resources/database-config.properties
+++ b/src/test/resources/database-config.properties
@@ -5,3 +5,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # terrible performance of the tests. See
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-database-initialization.html#howto-initialize-a-database-using-spring-jdbc
 spring.jpa.hibernate.ddl-auto=update
+# Reduce log verbosity in tests.
+debug=false
+trace=false
+logging.level.root=WARN
