--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>1.8</java.version>
 		<junit-jupiter.version>5.4.0</junit-jupiter.version>
 		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+		<!-- <jackson.version>2.9.9.1</jackson.version --> <!-- Uncomment as soon as FasterXML/jackson-bom#22 merged -->
 	</properties>
 
 	<dependencies>
