--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sst.nt.lms</groupId>
@@ -16,9 +16,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<junit-jupiter.version>5.4.0</junit-jupiter.version>
-		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
-		<jackson.version>2.9.9.20190807</jackson.version>
+		<junit-jupiter.version>5.5.2</junit-jupiter.version>
+		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+		<jackson.version>2.9.10</jackson.version>
 	</properties>
 
 	<dependencies>
